[package]
name = "device-buffer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tisu-sync = { path = "../tisu-sync" }
tisu-driver = { path = "../tisu-driver" }
tisu-memory = { path = "../tisu-memory" }
# tisu-memory = { git = "https://github.com/TisuOS/tisu-memory" }
# tisu-sync = { git = "https://github.com/TisuOS/tisu-sync" }
# tisu-driver = { git = "https://github.com/TisuOS/tisu-driver" }
