[package]
name = "device-buffer"
version = "0.3.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tisu-memory = { git = "https://gitee.com/TisuOS/tisu-memory", tag = "v3.1" }
tisu-sync = { git = "https://gitee.com/TisuOS/tisu-sync", tag = "v3.0" }
tisu-driver = { git = "https://gitee.com/TisuOS/tisu-driver", tag = "v3.1" }
